Proyecto2/rustdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentrust
  namespace: so1-p2
spec:
  selector:
    matchLabels:
      role: deploymentrust
  replicas: 1
  template:
    metadata:
      labels:
        role: deploymentrust
    spec:
      containers:
      - name: containclientrust
        image: luischay/rustclient3
        ports:
        - containerPort: 5003
      - name: containserverrust
        image: luischay/rustserver3
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: service-rust
spec:
  ports:
  - name: rust-client
    port: 5003
    targetPort: 5003
  # - name: grpc-server
  #   port: 5001
  #   targetPort: 5001
  selector:
    role: deploymentrust
  type: LoadBalancer
